--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@ body {font-family: "Lato", sans-serif}
     <img src="images/la.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Los Angeles</h3>
-      <p><b>Amazing show at the Constellation Room</b></p>   
+      <p><b>Performance at The Constellation Room</b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="images/ny.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>New York</h3>
-      <p><b>Nothing like performing in NYC</b></p>    
+      <p><b>Performance at Irving Plaza</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
