--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ body {font-family: "Lato", sans-serif}
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
+        <li class="w3-padding">3/14/2022 - New York, NY @ The Delancey<span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
+        <li class="w3-padding">3/16/2022 - Atlanta, GA @ The Tomahawk<span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
+        <li class="w3-padding">3/17/2022 - Los Angeles, CA @ The Constellation Room<span class="w3-badge w3-right w3-margin-right">30</span></li>
       </ul>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
