remove search and add streaming platforms

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ body {font-family: "Lato", sans-serif}
         <a href="#" class="w3-bar-item w3-button">Videos</a>
       </div>
     </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+    <a href="https://soundcloud.com/" target="_blank" class="w3-padding-large w3-hover-opacity w3-hide-medium w3-right"><i class="fa fa-soundcloud" style="color: #ff7700;font-size:x-large;"></i></a>
+    <a href="https://open.spotify.com/" target="_blank" class="w3-padding-large w3-hover-opacity w3-hide-medium w3-right"><i class="fa fa-spotify" style="color:limegreen;font-size:x-large;"></i></a>
   </div>
 </div>
 
