--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
+  <div class="w3-bar w3-black w3-card" style="padding-top:5px;">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
@@ -65,7 +65,7 @@ body {font-family: "Lato", sans-serif}
     <img src="images/chicago.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget</b></p>    
+      <p><b>Performance at House of Blues</b></p>    
     </div>
   </div>
 
@@ -111,7 +111,7 @@ body {font-family: "Lato", sans-serif}
           <img src="images/ny.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>New York</b></p>
-            <p class="w3-opacity">Fri 27 Nov 2016</p>
+            <p class="w3-opacity">Fri April 27th 2022</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
@@ -120,7 +120,7 @@ body {font-family: "Lato", sans-serif}
           <img src="images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Paris</b></p>
-            <p class="w3-opacity">Sat 28 Nov 2016</p>
+            <p class="w3-opacity">Sat April 28th 2022</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
@@ -129,7 +129,7 @@ body {font-family: "Lato", sans-serif}
           <img src="images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>San Francisco</b></p>
-            <p class="w3-opacity">Sun 29 Nov 2016</p>
+            <p class="w3-opacity">Sun April 29th 2022</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
